I have been working on the footer issues regarding the mobile version and have sorted this so all align central, I have a few small issues with the upload and contact page with the forms overlapping the footer in mobile view, but I will work on these next.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,7 +222,6 @@ p.donate {
     font-family: Montserrat, sans-serif;
     padding-top: 10px;
     padding-left: 46px;
-    /*padding-right: 200px;*/
 }
 
 
@@ -249,33 +248,45 @@ p.donate {
 }
 
 
-
 /* taken from the Love Running Code Institute project and amended in places to match what I am expecting to see based on my designs */
 
 .upload-form-section {
     clear: left;
     background-size: cover;
     background-position: center;
-    height: 900px;
+    height: 950px;
 }
 
 .upload-form {
     font-family: Montserrat, sans-serif;
-    padding-top: 0;
+    padding-top: 260px;
     background-color: rgba(255, 255, 255, 0.555);
-    max-width: 600px;
-    position: absolute;
-    left: 45px;
+    max-width: 90%;
+    position: relative;
     padding: 30px;
-    padding-bottom: 30px;
+}
+
+.submit-heading { 
+    font-family: Montserrat, sans-serif;
+    color: #2a5490;
+    padding-top: 140px;
+    padding-left: 83px; 
+}
+
+p.donate {
+    font-family: Montserrat, sans-serif;
+    padding-top: 10px;
+    padding-left: 83px;
+    padding-bottom: 20px;
 }
 
 .text-input {
     width: 100%;
     height: 25px;
-    padding: 5px 0 20px 0;
-    border: 0.5px solid #000000;   
+    margin: 5px 0 20px 0;
+    border: 0.5px solid #000000;    
 }
+
 
 .text-input:hover {
     border-color: #df6530;
@@ -319,7 +330,6 @@ p.contact {
     font-family: Montserrat, sans-serif;
     padding-top: 10px;
     padding-left: 83px;
-  
     padding-bottom: 20px;
 }
 
@@ -340,6 +350,7 @@ p.contact {
     clear: left;
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     height: 950px;
 }
 
@@ -347,8 +358,8 @@ p.contact {
     font-family: Montserrat, sans-serif;
     padding-top: 260px;
     background-color: rgba(255, 255, 255, 0.555);
-    max-width: 100%;
-    position: absolute;
+    max-width: 90%;
+    position: relative;
     padding: 30px;
 }
 
@@ -464,13 +475,11 @@ element.style:hover {
     padding-top: 0px;
     padding-right: 18px;
     padding-left: 10px;
-    text-align: right;
 }
 
 .supporting-logos {
     padding-top: 0;
     padding-bottom: 20px;
-    float: right;
     position: relative;
 }
 
@@ -484,5 +493,64 @@ element.style:hover {
 
 div.col-md-4.col-lg-4.col-xl-4.mx-auto.mt-4.text-md-start {
     position: relative;
-    max-width: 75%;
+    max-width: 100%;
 }
+
+
+
+
+/* ------------------------------------------- Media Queries */
+
+
+
+@media (max-width: 576px) { 
+    .sponsors {
+    text-align: center!important;
+    }
+
+
+    .support {
+    text-align: center!important;
+    }
+}    
+
+
+@media (max-width: 768px) { 
+    .sponsors {
+    text-align: center!important;
+    }
+
+
+    .support {
+    text-align: center!important;
+    }
+} 
+
+
+
+@media (max-width: 992px) { 
+    .sponsors {
+    text-align: left;
+    }
+
+
+    .support {
+    text-align: right;
+    }
+}  
+
+
+@media (max-width: 1200px) {     
+    .sponsors {
+    text-align: left;
+    }
+
+
+    .support {
+    text-align: right;
+    }
+}
+
+
+
+
